--- a/WeatherIOS/WeatherIOS.csproj
+++ b/WeatherIOS/WeatherIOS.csproj
@@ -118,6 +118,24 @@
     <Reference Include="MvvmCross.Plugins.Location.iOS">
       <HintPath>..\packages\MvvmCross.Plugin.Location.4.4.0\lib\Xamarin.iOS10\MvvmCross.Plugins.Location.iOS.dll</HintPath>
     </Reference>
+    <Reference Include="SQLitePCL.raw">
+      <HintPath>..\packages\SQLitePCL.raw.0.9.2\lib\Xamarin.iOS10\SQLitePCL.raw.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCL.batteries">
+      <HintPath>..\packages\SQLitePCL.bundle_green.0.9.2\lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLitePCL.batteries.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLite-net">
+      <HintPath>..\packages\sqlite-net-pcl.1.1.2\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLite-net.dll</HintPath>
+    </Reference>
+    <Reference Include="MvvmCross.Plugins.Sqlite">
+      <HintPath>..\packages\MvvmCross.Plugin.SQLitePCL.4.4.0\lib\Xamarin.iOS10\MvvmCross.Plugins.Sqlite.dll</HintPath>
+    </Reference>
+    <Reference Include="MvvmCross.Plugins.Sqlite.iOS">
+      <HintPath>..\packages\MvvmCross.Plugin.SQLitePCL.4.4.0\lib\Xamarin.iOS10\MvvmCross.Plugins.Sqlite.iOS.dll</HintPath>
+    </Reference>
+    <Reference Include="MvvmCross.Plugins.Messenger">
+      <HintPath>..\packages\MvvmCross.Plugin.Messenger.4.4.0\lib\Xamarin.iOS10\MvvmCross.Plugins.Messenger.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
@@ -135,6 +153,7 @@
     <Folder Include="ViewControllers\Location\" />
     <Folder Include="Assets.xcassets\AddIcon.imageset\" />
     <Folder Include="ViewControllers\CityDataSeviceView\" />
+    <Folder Include="ViewControllers\CityDataSeviceView\Cell\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
@@ -144,6 +163,7 @@
     <InterfaceDefinition Include="ViewControllers\PageViewController\StartPageViewController.xib" />
     <InterfaceDefinition Include="ViewControllers\Location\LocationViewController.xib" />
     <InterfaceDefinition Include="ViewControllers\CityDataSeviceView\CityDataServiceViewController.xib" />
+    <InterfaceDefinition Include="ViewControllers\CityDataSeviceView\Cell\CityTableViewCell.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -182,6 +202,13 @@
     <Compile Include="ViewControllers\CityDataSeviceView\CityDataServiceViewController.designer.cs">
       <DependentUpon>CityDataServiceViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Bootstrap\SqlitePluginBootstrap.cs" />
+    <Compile Include="ViewControllers\CityDataSeviceView\CityTableViewDataSource.cs" />
+    <Compile Include="ViewControllers\CityDataSeviceView\Cell\CityTableViewCell.cs" />
+    <Compile Include="ViewControllers\CityDataSeviceView\Cell\CityTableViewCell.designer.cs">
+      <DependentUpon>CityTableViewCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Bootstrap\MessengerPluginBootstrap.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WeatherLibrary\WeatherLibrary.csproj">
