--- a/WeatherLibrary/WeatherLibrary.csproj
+++ b/WeatherLibrary/WeatherLibrary.csproj
@@ -53,11 +53,14 @@
     <Compile Include="ServiceLayer\LocationManager.cs" />
     <Compile Include="BusinessLayer\ViewModel\LocationViewModel.cs" />
     <Compile Include="ServiceLayer\DataService.cs" />
-    <Compile Include="BusinessLayer\ViewModel\CityDataServiceViewModel.cs" />
     <Compile Include="Interfaces\IDataService.cs" />
     <Compile Include="Interfaces\IOpenWeatherAPI.cs" />
     <Compile Include="Interfaces\IOpenWeatherHttpRequest.cs" />
     <Compile Include="Interfaces\IWeatherControl.cs" />
+    <Compile Include="BusinessLayer\Model\DataBase\CityEntity.cs" />
+    <Compile Include="BusinessLayer\ViewModel\CityDataService\CityDataServiceViewModel.cs" />
+    <Compile Include="BusinessLayer\ViewModel\CityDataService\CreateCityViewModel.cs" />
+    <Compile Include="ServiceLayer\CitiesMassage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ServiceLayer\" />
@@ -68,6 +71,8 @@
     <Folder Include="BusinessLayer\ViewModelValueConventers\" />
     <Folder Include="BusinessLayer\ViewModel\PageViewModel\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="BusinessLayer\Model\DataBase\" />
+    <Folder Include="BusinessLayer\ViewModel\CityDataService\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
@@ -87,6 +92,21 @@
     </Reference>
     <Reference Include="MvvmCross.Plugins.Location">
       <HintPath>..\packages\MvvmCross.Plugin.Location.4.4.0\lib\portable-net45+win+wpa81+wp80\MvvmCross.Plugins.Location.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCL.raw">
+      <HintPath>..\packages\SQLitePCL.raw.0.9.2\lib\portable-net45+netcore45+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLitePCL.raw.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCL.batteries">
+      <HintPath>..\packages\SQLitePCL.bundle_green.0.9.2\lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLitePCL.batteries.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLite-net">
+      <HintPath>..\packages\sqlite-net-pcl.1.1.2\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLite-net.dll</HintPath>
+    </Reference>
+    <Reference Include="MvvmCross.Plugins.Sqlite">
+      <HintPath>..\packages\MvvmCross.Plugin.SQLitePCL.4.4.0\lib\portable-win+net45+wp8+win8+wpa81+win81+dotnet\MvvmCross.Plugins.Sqlite.dll</HintPath>
+    </Reference>
+    <Reference Include="MvvmCross.Plugins.Messenger">
+      <HintPath>..\packages\MvvmCross.Plugin.Messenger.4.4.0\lib\portable-net45+win+wpa81+wp80\MvvmCross.Plugins.Messenger.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
