--- a/WeatherLibrary/packages.config
+++ b/WeatherLibrary/packages.config
@@ -5,5 +5,10 @@
   <package id="MvvmCross.Core" version="4.4.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Platform" version="4.4.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="MvvmCross.Plugin.Location" version="4.4.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmCross.Plugin.Messenger" version="4.4.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmCross.Plugin.SQLitePCL" version="4.4.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="sqlite-net-pcl" version="1.1.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="SQLitePCL.bundle_green" version="0.9.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="SQLitePCL.raw" version="0.9.2" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
